5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4077/executions/1601_588.log
== TEST (2019-03-25 01:55:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

# 
resto100 = valor % 100

# Quantidade de notas de R$ 10
notas10 = resto50//10

# Valor restante a ser sacado com notas menores que R$ 50
resto10 = resto50 % 10

# Quantidade de notas de R$ 2
notas2 = resto10//2

print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")
print("temos",notas2,"cedulas de 2 R$")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    notas10 = resto50//10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:59:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

# 
resto100 = valor % 100


notas50 = resto100//50


resto50 = resto50 % 10


notas10 = resto50//2

print("temos",notas100,"cedulas de 100 R$")
print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    resto50 = resto50 % 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 01:59:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

# 
resto100 = valor % 100


notas50 = resto100//50


resto50 = resto50 % 10


notas10 = resto50//2

print("temos",notas100,"cedulas de 100 R$")
print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    resto50 = resto50 % 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 02:01:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

# 
resto100 = valor % 100


notas50 = resto100//50


resto50 = resto50 % 10


notas10 = resto50//2

print("temos",notas100,"cedulas de 100 R$")
print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    resto50 = resto50 % 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 02:03:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

 
resto100 = valor % 100


notas50 = resto100//50


notas10 = resto50 % 10




print("temos",notas100,"cedulas de 100 R$")
print("temos",notas50,"cedulas de 50 R$")
print("temos",notas10,"cedulas de 10 R$")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    notas10 = resto50 % 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:19:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

 
resto100 = valor % 100


notas50 = resto100//50


notas10 = resto50 % 10




print(notas100)
print(notas50)
print(notas10)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    notas10 = resto50 % 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:20:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

 
resto100 = valor % 100


notas50 = resto100//50


notas10 = notas50 % 10




print(notas100)
print(notas50)
print(notas10)

-- OUTPUT:
9
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:20:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

 
resto100 = valor % 100


notas50 = resto100//50


notas10 = notas50 % 10




print(notas100)
print(notas50)
print(notas10)

-- OUTPUT:
9
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:23:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

 
resto100 = valor % 50


notas50 = resto100//50


notas10 = notas50 % 10




print(notas100)
print(notas50)
print(notas10)

-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:26:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

 
resto100 = valor % 100


notas50 = resto50//50


notas10 = resto50 % 10




print(notas100)
print(notas50)
print(notas10)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    notas50 = resto50//50
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:27:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

 
resto100 = valor % 100


notas50 = resto100//50


notas10 = resto50 % 10




print(notas100)
print(notas50)
print(notas10)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    notas10 = resto50 % 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:28:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor//100

 
resto100 = valor % 100


notas50 = resto100//50


notas10 = resto50 % 10




print(notas100)
print(notas50)
print(notas10)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    notas10 = resto50 % 10
NameError: name 'resto50' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 18:37:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor // 100

 
resto100 = valor % 100


notas50 = resto100 // 50
resto50 = resto100 % 50

notas10 = resto50 // 10




print(notas100)
print(notas50)
print(notas10)

-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:37:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("Qual o valor do saque?: "))


notas100 = valor // 100

 
resto100 = valor % 100


notas50 = resto100 // 50
resto50 = resto100 % 50

notas10 = resto50 // 10




print(notas100)
print(notas50)
print(notas10)

-- EXECUTION TIME:
0.158915
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
